--- a/package.json
+++ b/package.json
@@ -3,13 +3,13 @@
   "version" : "0.0.1",
   "private": "true",
   "dependencies" : {
-    "express" : "3.x",
-    "jade": "*",
+    "express" : "3.4.7",
+    "jade": "1.1.0",
     "stylus": "*",
     "nib": "*",
-    "mocha": "*",
-    "grunt": "*",
-    "mongodb": "*",
+    "mocha": "1.16.2",
+    "grunt": "0.4.2",
+    "mongodb": "1.3.23",
     "mongoose": "*"
   }
 }
