--- a/testSite/package.json
+++ b/testSite/package.json
@@ -9,7 +9,6 @@
     "nib": "1.0.2",
     "mocha": "1.16.2",
     "grunt": "0.4.2",
-    "mongodb": "1.3.23",
-    "mongoose": "3.8.4"
+    "firebase": "1.0.2"
   }
 }
