--- a/testSite/package.json
+++ b/testSite/package.json
@@ -9,6 +9,7 @@
     "nib": "1.0.2",
     "mocha": "1.16.2",
     "grunt": "0.4.2",
-    "firebase": "1.0.2"
+    "firebase": "1.0.2",
+    "bcrypt": "0.7.7"
   }
 }
