--- a/testSite/package.json
+++ b/testSite/package.json
@@ -10,6 +10,7 @@
     "mocha": "1.16.2",
     "grunt": "0.4.2",
     "firebase": "1.0.2",
-    "bcrypt": "0.7.7"
+    "bcrypt": "0.7.7",
+    "validator": "3.1.0"
   }
 }
