--- a/testSite/package.json
+++ b/testSite/package.json
@@ -11,7 +11,8 @@
     "grunt": "0.4.2",
     "firebase": "1.0.2",
     "bcrypt": "0.7.7",
-    "validator": "3.1.0"
+    "validator": "3.1.0", 
+    "socket.io": "0.9"
   },
   "engines" : {
     "node": "0.10.24"
